# seqax

./: .gitignore  .nojekyll  CLAUDE.md  README.md  clearml-experiments.html  coord_checks.py  env.py  flash_attention.py  flat-tokens.html  hpo.py  index.html  init_seqax.py  input_loader.py  lcm.html  lr_sweep.py  power_scheduler.html  pyproject.toml  pytree-zarr-checkpoint.html  requirements-cpu.txt  requirements-gpu.txt  requirements-tpu.txt  robots.txt  search.json  sharding_tutorial.ipynb  sharding_tutorial.py  shared_kv.html  sitemap.xml  train.py  training_io.py
.claude/: settings.json
.claude/skills/seqax-train/: SKILL.md
.github/workflows/: python_lint_format.yml
configs/: c4_a100x8_base.yaml  c4_a100x8x4_10m.yaml  c4_a100x8x4_10m_narrow.yaml  c4_a100x8x4_10m_wide.yaml  c4_a100x8x4_15m.yaml  c4_a100x8x4_1b.yaml  c4_a100x8x4_25m.yaml  c4_a100x8x4_25m_narrow.yaml  c4_a100x8x4_270m.yaml  c4_a100x8x4_2b.yaml  c4_a100x8x4_37m.yaml  c4_a100x8x4_90m.yaml  coord_checks.yaml  flat_tokens_c4_a100x1_84m.yaml  huggingface_c4_a100x1_84m.yaml  local_test_synthetic.yaml  local_test_synthetic_lcm.yaml  local_test_tinystories.yaml  longcrawl_base.yaml  longcrawl_rtx4090_31m.yaml  longcrawl_rtx4090_profile.yaml  slim_base.yaml  slim_cpu_225k.yaml  slim_v4-32_31m.yaml  slim_v4-8_31m.yaml
docs/: _quarto.yml  clearml-experiments.md  index.qmd  lcm.ipynb  lcm.qmd  position_embeddings.qmd  power_scheduler.qmd  shared_kv.qmd  theme-dark.scss
playground/: shardopstest.py  simpleshardingtest.py
shardlib/: quantops.py  shardops.py  shardtypes.py
site_libs/bootstrap/: bootstrap-dark-f64e2b5a93415a7a4bb2dff4439fc49a.min.css
tools/: fp8_diag.py
